@@ -30,7 +30,7 @@ using namespace std;
 char* libofx_request_accountinfo( const OfxFiLogin* login )
 {
   OfxAccountInfoRequest strq( *login );
-  string request = OfxHeader() + strq.Output();
+  string request = OfxHeader(login->header_version) + strq.Output();
 
   unsigned size = request.size();
   char* result = (char*)malloc(size + 1);
