@@ -31,7 +31,7 @@ using namespace std;
 char* libofx_request_statement( const OfxFiLogin* login, const OfxAccountData* account, time_t date_from )
 {
   OfxStatementRequest strq( *login, *account, date_from );
-  string request = OfxHeader() + strq.Output();
+  string request = OfxHeader(login->header_version) + strq.Output();
 
   unsigned size = request.size();
   char* result = (char*)malloc(size + 1);
@@ -134,7 +134,7 @@ OfxAggregate OfxStatementRequest::InvestmentStatementRequest(void) const
 char* libofx_request_payment( const OfxFiLogin* login, const OfxAccountData* account, const OfxPayee* payee, const OfxPayment* payment )
 {
   OfxPaymentRequest strq( *login, *account, *payee, *payment );
-  string request = OfxHeader() + strq.Output();
+  string request = OfxHeader(login->header_version) + strq.Output();
 
   unsigned size = request.size();
   char* result = (char*)malloc(size + 1);
@@ -218,7 +218,7 @@ CFCT char* libofx_request_payment_status( const struct OfxFiLogin* login, const 
   ofx.Add( ofx.SignOnRequest() );
   ofx.Add( message );
   
-  string request = OfxHeader() + ofx.Output();
+  string request = OfxHeader(login->header_version) + ofx.Output();
 
   unsigned size = request.size();
   char* result = (char*)malloc(size + 1);
